# wallet

./: .gitignore  .gitmodules  .solhint.json  .typos.toml  CODEOWNERS  Cargo.toml  LICENSE  README.md  config.toml  config.toml.default  config.toml.local  config.toml.nitro  cross-shell.nix  flake.nix  foundry.toml  justfile
.github/workflows/: build.yml  lint.yml  test-nitro.yml  test.yml
contract-bindings/src/: lib.rs  simple_token.rs
contracts/: Cargo.toml
contracts/SimpleToken/: SimpleToken.sol
contracts/script/: DeploySimpleToken.s.sol  Erc20.s.sol
contracts/src/: SimpleToken.sol  erc20.rs  ierc20.rs  lib.rs
scripts/: run-sequencer  view-logs
sol/SimpleToken/: SimpleToken.sol
sol/erc20/: SimpleToken.sol
src/: builder.rs  main.rs  wallet.rs
src/contracts/: erc20.rs  ierc20.rs  mod.rs  simple_erc20.rs  simple_token.rs  weth9.rs
tests/nitro/: mod.rs
wallet/: Cargo.toml
wallet/src/: builder.rs  main.rs  wallet.rs
wallet/tests/: tests.rs
wallet/tests/nitro/: mod.rs
