[package]
name = "wallet"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "^1.0"
async-std = { version = "1.12.0", features = ["attributes", "tokio1"] }
async-trait = "0.1.77"
clap = { version = "4.4", features = ["derive", "env"] }
commit = { git = "https://github.com/EspressoSystems/commit" }
ethers = "2.0"
lazy_static = "1.4"
serde = { version = "1.0.195", features = ["derive"] }
