[package]
name = "wallet"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "^1.0"
async-std = { version = "1.12.0", features = ["attributes", "tokio1"] }
async-trait = "0.1.77"
clap = { version = "4.4", features = ["derive", "env"] }
commit = { git = "https://github.com/EspressoSystems/commit" }
contract-bindings = { path = "../contract-bindings" }
ethers = "2.0"
lazy_static = "1.4"
reqwest = "0.11.26"
serde = { version = "1.0.195", features = ["derive"] }
url = "2.5.0"

[dev-dependencies]
assert_cmd = "2.0.14"
escargot = "0.5.10"
