[package]
name = "wallet"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "^1.0"
async-std = { version = "1.12.0", features = ["attributes", "tokio1"] }
async-trait = "0.1.77"
clap = { version = "4.4", features = ["derive", "env"] }
clap-serde-derive = "0.2.1"
commit = { git = "https://github.com/EspressoSystems/commit" }
contract-bindings = { path = "../contract-bindings" }
ethers = "2.0"
lazy_static = "1.4"
reqwest = { version = "0.11.26", features = ["json"] }
serde = { version = "1.0.195", features = ["derive"] }
toml = "0.8.12"
url = { version = "2.5.0", features = ["serde"] }

[dev-dependencies]
assert_cmd = "2.0.14"
dotenv = "0.15.0"
escargot = "0.5.10"
